# hermes

./: Cargo.toml  LICENSE  README.md  run.sh
cert/: CA.key  CA.pem  CA.srl  localhost.crt  localhost.csr  localhost.decrypted.key  localhost.key
docs/: README.md  cryptography.md
hermes-server/: Cargo.toml  hermes.toml
hermes-server/src/: api.rs  config.rs  main.rs
