[package]
name = "hermes-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
eyre = "0.6.8"
poem = { version = "1.3.58", features = ["eyre06", "rustls", "static-files"] }
poem-openapi = { version = "3.0.5", features = ["swagger-ui"] }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
